--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,48 @@
-
+#a{
+	height:100px;
+	width:100px;
+	background-color:red;
+	order:2;
+}
+#b{
+	height:100px;
+	width:100px;
+	background-color:blue;
+	order:3;
+}
+#c{
+	height:100px;
+	width:100px;
+	background-color:green;
+	order:1;
+}
+.A{
+	display:flex;
+	justify-content:space-between;
+	font-size:3rem;
+	margin-bottom:100px;
+}
+.a{
+	height:100px;
+	width:100px;
+	background-color:red;
+	order:6;
+}
+.b{
+	height:100px;
+	width:100px;
+	background-color:blue;
+	order:7;
+}
+.c{
+	height:100px;
+	width:100px;
+	background-color:green;
+}
+.B{
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-between;
+	font-size:3rem;
+}
 /* Your CSS Code here. */
