--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 	background-color:green;
 	order:1;
 }
-.A{
+.holder{
 	display:flex;
 	justify-content:space-between;
 	font-size:3rem;
@@ -39,7 +39,7 @@
 	width:100px;
 	background-color:green;
 }
-.B{
+.item{
 	display:flex;
 	flex-wrap:wrap;
 	justify-content:space-between;
