--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,10 @@
 	background-color:green;
 	order:1;
 }
-.A{
+.holder{
 	display:flex;
 	justify-content:space-between;
+	flex-wrap:wrap;
 	font-size:3rem;
 	margin-bottom:100px;
 }
